--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,4 +1,7 @@
 name: cs325-project-1
 channels:
   - defaults
+dependencies:
+  - python=3.12.5
+  - requests
 prefix: /home/jenn/miniconda3/envs/cs325-project-1
